Migrate to Spring Boot 3 and Java 21 (#491)
* Migrate to Spring Boot 3 and Java 21

* Change java version to 21 for github actions

* Update build.yml

* Update build.yml

* Update build.yml

* Replace wrong import and apply format

* Upgrade dependency