@@ -1,9 +1,6 @@
 package sic.controller;
 
-import io.jsonwebtoken.Claims;
-import io.jsonwebtoken.Jwts;
-import io.jsonwebtoken.SignatureAlgorithm;
-import io.jsonwebtoken.impl.crypto.MacProvider;
+import io.jsonwebtoken.impl.DefaultClaims;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -11,22 +8,14 @@ import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.context.MessageSource;
 import org.springframework.test.context.ContextConfiguration;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
-import sic.modelo.Rol;
-import sic.modelo.Sucursal;
-import sic.modelo.criteria.BusquedaFacturaVentaCriteria;
 import sic.modelo.dto.ProductoFaltanteDTO;
-import sic.service.impl.AuthServiceImpl;
-import sic.service.impl.CarritoCompraServiceImpl;
-import sic.service.impl.ProductoServiceImpl;
+import sic.service.AuthServiceImpl;
+import sic.service.CarritoCompraServiceImpl;
+import sic.service.ProductoServiceImpl;
 
-import javax.crypto.SecretKey;
-import java.time.LocalDateTime;
-import java.time.ZoneId;
-import java.time.ZonedDateTime;
 import java.util.ArrayList;
-import java.util.Collections;
-import java.util.Date;
 import java.util.List;
+import java.util.Map;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.Mockito.when;
@@ -44,31 +33,15 @@ class CarritoCompraControllerTest {
 
   @Test
   void shouldGetProductosDelCarritoSinStockDisponible() {
-    LocalDateTime today = LocalDateTime.now();
-    ZonedDateTime zdtNow = today.atZone(ZoneId.systemDefault());
-    ZonedDateTime zdtInOneMonth = today.plusMonths(1L).atZone(ZoneId.systemDefault());
-    SecretKey secretKey = MacProvider.generateKey();
-    Claims claims =
-        Jwts.parser()
-            .setSigningKey(secretKey)
-            .parseClaimsJws(
-                Jwts.builder()
-                    .setIssuedAt(Date.from(zdtNow.toInstant()))
-                    .setExpiration(Date.from(zdtInOneMonth.toInstant()))
-                    .signWith(SignatureAlgorithm.HS512, secretKey)
-                    .claim("idUsuario", 1L)
-                    .claim("roles", Collections.singletonList(Rol.ADMINISTRADOR))
-                    .compact())
-            .getBody();
+    var claims = new DefaultClaims(Map.of("idUsuario", 1L, "roles", List.of("ADMINISTRADOR")));
     when(authService.getClaimsDelToken("headers")).thenReturn(claims);
-    BusquedaFacturaVentaCriteria busquedaFacturaVentaCriteria =
-        BusquedaFacturaVentaCriteria.builder().build();
     List<ProductoFaltanteDTO> faltantes = new ArrayList<>();
     ProductoFaltanteDTO productoFaltante = new ProductoFaltanteDTO();
     productoFaltante.setIdProducto(1L);
     faltantes.add(productoFaltante);
     when(carritoCompraService.getProductosDelCarritoSinStockDisponible(1L, 1L)).thenReturn(faltantes);
     assertEquals(
-        faltantes, carritoCompraController.getProductosDelCarritoSinStockDisponible(1L, "headers"));
+            faltantes,
+            carritoCompraController.getProductosDelCarritoSinStockDisponible(1L, "headers"));
   }
 }
