@@ -1,9 +1,6 @@
 package sic.controller;
 
-import io.jsonwebtoken.Claims;
-import io.jsonwebtoken.Jwts;
-import io.jsonwebtoken.SignatureAlgorithm;
-import io.jsonwebtoken.impl.crypto.MacProvider;
+import io.jsonwebtoken.impl.DefaultClaims;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -13,18 +10,13 @@ import org.springframework.test.context.ContextConfiguration;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
 import sic.modelo.NotaCredito;
 import sic.modelo.NotaDebito;
-import sic.modelo.Rol;
 import sic.modelo.Usuario;
 import sic.modelo.dto.NuevaNotaCreditoSinFacturaDTO;
 import sic.modelo.dto.NuevaNotaDebitoSinReciboDTO;
 import sic.service.*;
 
-import javax.crypto.SecretKey;
-import java.time.LocalDateTime;
-import java.time.ZoneId;
-import java.time.ZonedDateTime;
-import java.util.Collections;
-import java.util.Date;
+import java.util.List;
+import java.util.Map;
 
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
@@ -33,33 +25,18 @@ import static org.mockito.Mockito.when;
 @ContextConfiguration(classes = {NotaController.class, MessageSource.class})
 class NotaControllerTest {
 
-  @MockBean INotaService notaService;
-  @MockBean IReciboService reciboService;
-  @MockBean ISucursalService sucursalService;
-  @MockBean IUsuarioService usuarioService;
-  @MockBean IAuthService authService;
+  @MockBean NotaService notaService;
+  @MockBean ReciboService reciboService;
+  @MockBean SucursalService sucursalService;
+  @MockBean UsuarioService usuarioService;
+  @MockBean AuthService authService;
   @MockBean MessageSource messageSource;
 
   @Autowired NotaController notaController;
 
   @Test
   void shouldGuardarNotaCreditoSinFactura() {
-    LocalDateTime today = LocalDateTime.now();
-    ZonedDateTime zdtNow = today.atZone(ZoneId.systemDefault());
-    ZonedDateTime zdtInOneMonth = today.plusMonths(1L).atZone(ZoneId.systemDefault());
-    SecretKey secretKey = MacProvider.generateKey();
-    Claims claims =
-            Jwts.parser()
-                    .setSigningKey(secretKey)
-                    .parseClaimsJws(
-                            Jwts.builder()
-                                    .setIssuedAt(Date.from(zdtNow.toInstant()))
-                                    .setExpiration(Date.from(zdtInOneMonth.toInstant()))
-                                    .signWith(SignatureAlgorithm.HS512, secretKey)
-                                    .claim("idUsuario", 1L)
-                                    .claim("roles", Collections.singletonList(Rol.ADMINISTRADOR))
-                                    .compact())
-                    .getBody();
+    var claims = new DefaultClaims(Map.of("idUsuario", 1L, "roles", List.of("ADMINISTRADOR")));
     when(authService.getClaimsDelToken("headers")).thenReturn(claims);
     Usuario usuario = new Usuario();
     when(usuarioService.getUsuarioNoEliminadoPorId(1L)).thenReturn(usuario);
@@ -72,22 +49,7 @@ class NotaControllerTest {
 
   @Test
   void shouldGuardarNotaDebitoSinRecibo() {
-    LocalDateTime today = LocalDateTime.now();
-    ZonedDateTime zdtNow = today.atZone(ZoneId.systemDefault());
-    ZonedDateTime zdtInOneMonth = today.plusMonths(1L).atZone(ZoneId.systemDefault());
-    SecretKey secretKey = MacProvider.generateKey();
-    Claims claims =
-            Jwts.parser()
-                    .setSigningKey(secretKey)
-                    .parseClaimsJws(
-                            Jwts.builder()
-                                    .setIssuedAt(Date.from(zdtNow.toInstant()))
-                                    .setExpiration(Date.from(zdtInOneMonth.toInstant()))
-                                    .signWith(SignatureAlgorithm.HS512, secretKey)
-                                    .claim("idUsuario", 1L)
-                                    .claim("roles", Collections.singletonList(Rol.ADMINISTRADOR))
-                                    .compact())
-                    .getBody();
+    var claims = new DefaultClaims(Map.of("idUsuario", 1L, "roles", List.of("ADMINISTRADOR")));
     when(authService.getClaimsDelToken("headers")).thenReturn(claims);
     Usuario usuario = new Usuario();
     when(usuarioService.getUsuarioNoEliminadoPorId(1L)).thenReturn(usuario);
